--- a/SharedLibrary/SharedLibrary.csproj
+++ b/SharedLibrary/SharedLibrary.csproj
@@ -2,6 +2,25 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>SW.CS8.SharedLibrary</PackageId>
+    <PackageVersion>1.0.0.0</PackageVersion>
+    <Authors>Spencer B Weber</Authors>
+    <PackageLicenseExpression>MS-PL</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/SpencerBWeber/CS8AndDotNetCore3</PackageProjectUrl>
+    <PackageIcon>packt-cs8-sharedlibrary.png</PackageIcon>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>Example shared library packaged for NuGet.</PackageReleaseNotes>
+    <Description>Three extension methods to validate a string value.</Description>
+    <Copyright>Copyright © 2019 Spencer Weber</Copyright>
+    <PackageTags>string extension packt cs8</PackageTags>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None inclue="packt-cs8-sharedlibrary.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
