--- a/SharedLibrary/SharedLibrary.csproj
+++ b/SharedLibrary/SharedLibrary.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None inclue="packt-cs8-sharedlibrary.png">
+    <None include="packt-cs8-sharedlibrary.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
